WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220136
VMInspector::dumpRegisters() should not dump beyond the start of the next frame.
https://bugs.webkit.org/show_bug.cgi?id=220136
Summary
VMInspector::dumpRegisters() should not dump beyond the start of the next frame.
Mark Lam
Reported
2020-12-23 21:43:44 PST
rdar://64404201
Attachments
proposed patch.
(4.87 KB, patch)
2020-12-23 22:02 PST
,
Mark Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2020-12-23 22:02:49 PST
Created
attachment 416739
[details]
proposed patch.
Yusuke Suzuki
Comment 2
2020-12-25 02:15:53 PST
Comment on
attachment 416739
[details]
proposed patch. r=me
EWS
Comment 3
2020-12-25 02:28:25 PST
Committed
r271082
: <
https://trac.webkit.org/changeset/271082
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 416739
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug