JSTests/stress/dumpRegisters-should-stop-before-next-frame.js
@@ -1,0 +1,15 @@
+//@ runNoisyTestDefault
+
+if (0) {
+  let z0 = []; let z1 = []; let z2 = []; let z3 = []; let z4 = []; let z5 = []; let z6 = []; let z7 = []; let z8 = []; let z9 = []; 
+  let z10 = []; let z11 = []; let z12 = []; let z13 = []; let z14 = []; let z15 = []; let z16 = []; let z17 = []; let z18 = []; 
+  let z19 = []; let z20 = []; let z21 = []; let z22 = []; let z23 = []; let z24 = []; let z25 = []; let z26 = []; let z27 = []; 
+  let z28 = []; let z29 = []; let z30 = []; let z31 = []; let z32 = []; let z33 = []; let z34 = []; let z35 = []; let z36 = []; 
+  let z37 = []; let z38 = []; let z39 = []; let z40 = []; let z41 = []; let z42 = []; let z43 = []; let z44 = []; let z45 = []; 
+  let z46 = []; let z47 = []; let z48 = []; let z49 = []; let z50 = []; let z51 = []; let z52 = []; let z53 = []; let z54 = []; 
+  let z55 = []; let z56 = []; let z57 = []; let z58 = []; let z59 = []; let z60 = []; let z61 = []; let z62 = []; let z63 = []; 
+  let z64 = []; let z65 = []; let z66 = []; let z67 = []; let z68 = []; let z69 = []; let z70 = [];
+  for (let q of []) {}
+}
+[];
+$vm.dumpRegisters();
